fix - Change skill component layout on mobile

--- a/src/components/skillComponent/style.css
+++ b/src/components/skillComponent/style.css
@@ -34,6 +34,8 @@
 
 @media screen and (max-width: 600px) {
   .skill__card {
-    min-width: inherit;
+    justify-content: center;
+    width: 100%;
+    min-width: initial;
   }
 }
